Issue #21975: Fixed crash when using uninitialized sqlite3.Row (in particular when unpickling pickled sqlite3.Row).  sqlite3.Row is now initialized in the __new__() method.